Add additional test that checks for empty (not missing) group